Updated to latest ionic 1 release

--- a/www/templates/guide.html
+++ b/www/templates/guide.html
@@ -39,7 +39,7 @@ Vista de guia, que muestra las categorias y dias disponibles.
                     <div class="col col-25">
                         <button class="button button-block button-large button-balanced button-day colorSanLorenzo"
                                 ng-click="openDay(8)">
-                            <span class="littleDay">Lun.</span><br/>
+                            <span class="littleDay">Mié.</span><br/>
                             8
                         </button>
                     </div>
@@ -47,7 +47,7 @@ Vista de guia, que muestra las categorias y dias disponibles.
                     <div class="col col-25">
                         <button class="button button-block button-large button-balanced button-day colorSanLorenzo"
                                 ng-click="openDay(9)">
-                            <span class="littleDay">Mar.</span><br/>
+                            <span class="littleDay">Jue.</span><br/>
                             9
                         </button>
                     </div>
@@ -55,7 +55,7 @@ Vista de guia, que muestra las categorias y dias disponibles.
                     <div class="col col-25">
                         <button class="button button-block button-large button-balanced button-day colorSanLorenzo"
                                 ng-click="openDay(10)">
-                            <span class="littleDay">Mié.</span><br/>
+                            <span class="littleDay">Vie.</span><br/>
                             10
                         </button>
                     </div>
@@ -63,7 +63,7 @@ Vista de guia, que muestra las categorias y dias disponibles.
                     <div class="col col-25">
                         <button class="button button-block button-large button-balanced button-day colorSanLorenzo"
                                 ng-click="openDay(11)">
-                            <span class="littleDay">Jue.</span><br/>
+                            <span class="littleDay">Sáb.</span><br/>
                             11
                         </button>
                     </div>
@@ -75,7 +75,7 @@ Vista de guia, que muestra las categorias y dias disponibles.
                     <div class="col col-25">
                         <button class="button button-block button-large button-balanced button-day colorSanLorenzo"
                                 ng-click="openDay(12)">
-                            <span class="littleDay">Vie.</span><br/>
+                            <span class="littleDay">Dom.</span><br/>
                             12
                         </button>
                     </div>
@@ -83,7 +83,7 @@ Vista de guia, que muestra las categorias y dias disponibles.
                     <div class="col col-25">
                         <button class="button button-block button-large button-balanced button-day colorSanLorenzo"
                                 ng-click="openDay(13)">
-                            <span class="littleDay">Sab.</span><br/>
+                            <span class="littleDay">Lun.</span><br/>
                             13
                         </button>
                     </div>
@@ -91,7 +91,7 @@ Vista de guia, que muestra las categorias y dias disponibles.
                     <div class="col col-25">
                         <button class="button button-block button-large button-balanced button-day colorSanLorenzo"
                                 ng-click="openDay(14)">
-                            <span class="littleDay">Dom.</span><br/>
+                            <span class="littleDay">Mar.</span><br/>
                             14
                         </button>
                     </div>
@@ -99,7 +99,7 @@ Vista de guia, que muestra las categorias y dias disponibles.
                     <div class="col col-25">
                         <button class="button button-block button-large button-balanced button-day colorSanLorenzo"
                                 ng-click="openDay(15)">
-                            <span class="littleDay">Lun.</span><br/>
+                            <span class="littleDay">Mié.</span><br/>
                             15
                         </button>
                     </div>
@@ -119,7 +119,7 @@ Vista de guia, que muestra las categorias y dias disponibles.
                     <div class="col col-50">
                         <button class="button button-block button-large button-balanced colorSanLorenzo"
                                 ng-click="openCategory('conciertos')">
-                            <span class="categoryLabel">Conciertos</span>
+                            <span class="categoryLabel">Música</span>
                         </button>
                     </div>
                     <div class="col col-50">
