--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -20,7 +20,7 @@ Muestra información sobre la app (versión, creador, apoyo...)
         <img src="img/logo.png" style="display: block;margin-left: auto;margin-right: auto; margin-top:10px;">
 
         <div style="text-align: center;">
-            Versión 3.1.1
+            Versión 3.1.4
         </div>
 
         <div class="list card">
@@ -41,10 +41,7 @@ Muestra información sobre la app (versión, creador, apoyo...)
                 ismaro.394@gmail.com
             </a>
 
-            <a href="" class="item item-icon-left" ng-click="twitter()">
-                <i class="icon ion-social-twitter"></i>
-                @ismaro3
-            </a>
+        
 
             <div class="item item-divider" style="text-align: center;">
                 <b>Iconos y fotografías</b>
@@ -57,30 +54,29 @@ Muestra información sobre la app (versión, creador, apoyo...)
             </a>
 
             <div class="item item-divider" style="text-align: center;">
-                <b>Arreglos</b>
+                <b>Arreglos y programa</b>
             </div>
             <a href="" class="item item-icon-left">
 
                 <i class="icon ion-person"></i>
 
-                Lara Luis
+                Darío Rodríguez, Lara Luís
             </a>
 
-            <div class="item item-divider" style="text-align: center;">
-                <b>Formateo del programa de fiestas</b>
+             <div class="item item-divider" style="text-align: center;">
+                <b>Servidor</b>
             </div>
-            <a href="" class="item item-icon-left">
+            <a href="" class="item item-icon-left" ng-click="datumize();">
 
-                <i class="icon ion-person"></i>
-
-                Darío Rodríguez
+                <i class="icon ion-cloud"></i>
+                Datumize
             </a>
 
 
             <div class="item item-divider" style="text-align: center;">
                 <b>Código fuente</b>
             </div>
-            <a href="" class="item item-icon-left" ng-click="github()">
+            <a href="" class="item item-icon-left" ng-click="github();">
 
                 <i class="icon ion-social-github"></i>
 
